--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
 </head>
 <body style="font-family: sans, Arial, sans-serif; font-size: 75%">
 	<div class="container">
-		<header><h1>No internet</h1></header>
+		<!--<header><h1>No internet</h1></header>
 		<br><p>Try:</p>
 		<ul><li>Cheking the network cables, modem, and router</li>
 		<li>Reconnecting to Wi-Fi</li></ul>
-		<br><p>DNS_PROBE_FINISHED_NO_INTERNET</p>
+		<br><p>DNS_PROBE_FINISHED_NO_INTERNET</p>-->
+		<header><h1>Manjaro Xfce Dotfiles (MXDF)</h1></header>
+		<br><p>Files:</p>
+		<ul><li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.compton.conf">.compton.conf</a></li>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.vimrc">.vimrc</a></li>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.zshrc">.zshrc</a></li>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/cat">cat</a></li>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/packages">packages</a></li>
+		</ul>
 	</div>
 </body>
 </html>
