--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>vkplaya</title>
+	<title>MXDF</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body style="font-family: sans, Arial, sans-serif; font-size: 75%">
