--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-	<title>vkplaya</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body style="font-family: sans, Arial, sans-serif; font-size: 75%">
@@ -10,7 +9,7 @@
 		<ul><li>Cheking the network cables, modem, and router</li>
 		<li>Reconnecting to Wi-Fi</li></ul>
 		<br><p>DNS_PROBE_FINISHED_NO_INTERNET</p>-->
-<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
+<!--<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
 <tt>▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒</tt>
 <tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
@@ -36,15 +35,32 @@
 <tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒</tt>
-<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
-		<header><h1>Manjaro Xfce Dotfiles (MXDF)</h1></header>
+<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>-->
+<pre>
+	 _        _                 _   _
+	| |_ _ __/ | ___ _   _ _ __| |_/ |___   _ __ ___ _ __   ___
+	| __| '__| |/ __| | | | '__| __| / __| | '__/ _ \ '_ \ / _ \
+	| |_| |  | | (__| |_| | |  | |_| \__ \ | | |  __/ |_) | (_) |
+	 \__|_|  |_|\___|\__, |_|   \__|_|___/ |_|  \___| .__/ \___/
+                         |___/                          |_|
+
+</pre><br>
+		<header><h1>Linux Dotfiles (Early MXDF)</h1></header>
 		<br><p>Files:</p>
-		<ul><li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.compton.conf">.compton.conf</a></li>
+		<ul>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/packages">packages</a></li>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/cat">cat</a></li>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.compton.conf">.compton.conf</a></li>
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.vimrc">.vimrc</a></li>
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.zshrc">.zshrc</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/cat">cat</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/packages">packages</a></li>
-		</ul>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.bashrc">.bashrc</a></li>
+		</ul><br>
+		<header><h1>Wallpapers</h1></header>
+		<br><p>Files:</p>
+		<ul>
+			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/Wallpapers26082021.zip">Wallpapers26082021.zip</a></li>
+		</ul><br>
+		<footer>© 2021 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
 </body>
 </html>
