--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body style="font-family: sans, Arial, sans-serif; font-size: 75%">
 	<div class="container">
