--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 </pre><br>
 		<header><h1>Linux Dotfiles (Early MXDF)</h1></header>
+		<img src="wsl.jpg">
 		<br><p>Files:</p>
 		<ul>
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/packages">packages</a></li>
