--- a/GUPLESS.HTML
+++ b/GUPLESS.HTML
@@ -9,7 +9,10 @@
 <body>
     <div class="layout">
         <img id="GUPLESS" src="GUPLESS.PNG">
-        <p>GUPLESSWORLD</p>
+        <div id="right"><h2>GUPLESSWORLD</h2></div>
+            <p>Gupless - This is a new form of life!</p>
+            <p>Gupless - This is the future!</p>
+        <div id="center"><p>Be like Gupless!</p></div>
     </div>
 </body>
 </html>
