--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒</tt>
-<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>-->
+<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
 <pre>
 	 _        _                 _   _
 	| |_ _ __/ | ___ _   _ _ __| |_/ |___   _ __ ___ _ __   ___
@@ -45,9 +45,9 @@
 	 \__|_|  |_|\___|\__, |_|   \__|_|___/ |_|  \___| .__/ \___/
                          |___/                          |_|
 
-</pre><br>
+</pre><br>-->
 		<header><h1>Linux Dotfiles (Early MXDF)</h1></header>
-		<img src="wsl.jpg">
+		<!--<img src="wsl.jpg">-->
 		<br><p>Files:</p>
 		<ul>
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/packages">packages</a></li>
@@ -57,7 +57,7 @@
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.zshrc">.zshrc</a></li>
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.bashrc">.bashrc</a></li>
 		</ul><br>
-		<header><h1>Wallpapers</h1></header>
+		<!--<header><h1>Wallpapers</h1></header>
 		<br><p>Files:</p>
 		<ul>
 			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/Wallpapers26082021.zip">Wallpapers26082021.zip</a></li>
@@ -66,8 +66,8 @@
 		<br><p>GUPLESS:</p>
 		<ul>
 			<li><a href="GUPLESS.HTML">GUPLESS.HTML</a></li>
-		</ul><br>
-		<footer>© 2021 tr1cyrt1s (ecnecsenimul)</footer>
+		</ul><br>-->
+		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
 </body>
 </html>
