--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
 <tt>▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒</tt>
-<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>-->
+<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
 <pre>
 	 _        _                 _   _
 	| |_ _ __/ | ___ _   _ _ __| |_/ |___   _ __ ___ _ __   ___
@@ -45,7 +45,8 @@
 	 \__|_|  |_|\___|\__, |_|   \__|_|___/ |_|  \___| .__/ \___/
                          |___/                          |_|
 
-</pre><br>
+</pre><br>-->
+<div id="grad"></div><br>
 		<header><h1>Linux Dotfiles (Early MXDF)</h1></header>
 		<!--<img src="wsl.jpg">-->
 		<br><p>Files:</p>
