--- a/index.html
+++ b/index.html
@@ -2,73 +2,26 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta charset="utf-8">
 </head>
 <body style="font-family: sans, Arial, sans-serif; font-size: 75%">
 	<div class="container">
-		<!--<header><h1>No internet</h1></header>
-		<br><p>Try:</p>
-		<ul><li>Cheking the network cables, modem, and router</li>
-		<li>Reconnecting to Wi-Fi</li></ul>
-		<br><p>DNS_PROBE_FINISHED_NO_INTERNET</p>-->
-<!--<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
-<tt>▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒</tt>
-<tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒███████████████████████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒██████████████▒▒▒██████████████▒▒▒██████████████▒▒▒</tt>
-<tt>▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒</tt>
-<tt>▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒</tt>
-<pre>
-	 _        _                 _   _
-	| |_ _ __/ | ___ _   _ _ __| |_/ |___   _ __ ___ _ __   ___
-	| __| '__| |/ __| | | | '__| __| / __| | '__/ _ \ '_ \ / _ \
-	| |_| |  | | (__| |_| | |  | |_| \__ \ | | |  __/ |_) | (_) |
-	 \__|_|  |_|\___|\__, |_|   \__|_|___/ |_|  \___| .__/ \___/
-                         |___/                          |_|
-
-</pre><br>-->
-<div id="grad"></div><br>
-		<header><h1>Linux Dotfiles (Early MXDF)</h1></header>
-		<!--<img src="wsl.jpg">-->
-		<br><p>Files:</p>
-		<ul>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/packages">packages</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/cat">cat</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.compton.conf">.compton.conf</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.vimrc">.vimrc</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.zshrc">.zshrc</a></li>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/.bashrc">.bashrc</a></li>
-		</ul><br>
-		<!--<header><h1>Wallpapers</h1></header>
-		<br><p>Files:</p>
-		<ul>
-			<li><a href="https://github.com/ecnecsenimul/mxdf/blob/master/Wallpapers26082021.zip">Wallpapers26082021.zip</a></li>
-		</ul><br>
-		<header><h1>GUPLESS</h1></header>
-		<br><p>GUPLESS:</p>
-		<ul>
-			<li><a href="GUPLESS.HTML">GUPLESS.HTML</a></li>
-		</ul><br>-->
-		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
+		<div id="gradient"></div><br>
+		<header><h1>18 Years old ❤️</h1></header><br>
+		<h3>Audio</h3>
+		<p>LG MCS66F - Speaker.</p>
+		<p>Genius SW G2.1 1250 - Subwoofer.</p>
+		<p>Samsung MAX-KJ740 (MAX-KT85) - Music center.</p>
+		<br>
+		<h3>Computer</h3>
+		<p>CPU: Intel Core i3 3217U 1.80 GHz</p>
+		<p>GPU: Intel HD Graphics 4000</p>
+		<p>RAM: Hynix 4GBx2 8GB</p>
+		<h3>Phone</h3>
+		<p>Xiaomi Redmi X4 3/32GB</p>
+		<h3>Favorite artist</h3>
+		<p>Кишлак, АПФС.</p>
+		<br><footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
 </body>
 </html>
