--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 </head>
 <body style="font-family: sans, Arial, sans-serif; font-size: 75%">
 	<div class="container">
-		<div id="gradient"></div><br>
-		<header><h1>18 Years old ❤️</h1></header><br>
-		<h3>Audio</h3>
+		<div id="gradienttop"></div><br>
+		<header>
+			<!--<h1>18 Years old ❤️</h1>-->
+			<div id="hello">
+				<a href="https://ecnecsenimul.github.io/index.html"><img src="/hello_variation.svg"></a><br>
+				<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
+			</div>
+		</header><br><br>
+		<!--<h3>Audio</h3>
 		<p>LG MCS66F - Speaker.</p>
 		<p>Genius SW G2.1 1250 - Subwoofer.</p>
 		<p>Samsung MAX-KJ740 (MAX-KT85) - Music center.</p>
@@ -21,7 +27,9 @@
 		<p>Xiaomi Redmi X4 3/32GB</p>
 		<h3>Favorite artist</h3>
 		<p>Кишлак, АПФС.</p>
-		<br><footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
+		<br>-->
+		<div id="gradientmiddle"></div>
+		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
 </body>
 </html>
