--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<!--<h1>18 Years old ❤️</h1>-->
 			<div id="hello">
-				<a href="https://ecnecsenimul.github.io/index.html"><img src="/hello_variation.svg"></a><br>
+				<a href=""><img src="/hello_variation.svg"></a><br>
 				<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
 			</div>
 		</header><br><br>
