--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<a href=""><img src="/hello_variation.svg"></a><br>
 				<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
 			</div>
-		</header><br><br>
+		</header><br>
 		<!--<h3>Audio</h3>
 		<p>LG MCS66F - Speaker.</p>
 		<p>Genius SW G2.1 1250 - Subwoofer.</p>
@@ -28,6 +28,29 @@
 		<h3>Favorite artist</h3>
 		<p>Кишлак, АПФС.</p>
 		<br>-->
+		<div id="specs">
+			<h3>Motherboard:	ASUS P5QC</h3>
+			<li>LGA775</li>
+			<li>P45</li><br>
+			 <h3>RAM:		Kingston HyperX Blue CL9</h3>
+			<li>DDR3</li>
+			<li>1600MHz</li>
+			<li>2x4GB</li><br>
+			 <h3>CPU:		Intel Core 2 Quad EXTREME QX9770</h3>
+			<li>Yorkfield</li>
+			<li>3.2GHz</li>
+			<li>Cache L2 - 12MB</li>
+			<h4>Intel Xeon X5460 (Intel Xeon X3380)</h4>
+			<li>Harpertown</li>
+			<li>3.2GHz</li>
+			<li>Cache L2 - 12MB</li><br>
+			 <h3>GPU:		Sapphire RX470</h3>
+			<li>GDDR5</li>
+			<li>4GB</li>
+			<li>1260MHz</li><br>
+			<h3>Power Supply:	CoolerMaster GOLD MWE 550</h3><br>
+			<h3>Cooler:		Noctua NH-P1</h3>
+		</div><br>
 		<div id="gradientmiddle"></div>
 		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
