--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
 				<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
 			</div>
 		</header><br>
-		<!--<h3>Audio</h3>
-		<p>LG MCS66F - Speaker.</p>
-		<p>Genius SW G2.1 1250 - Subwoofer.</p>
-		<p>Samsung MAX-KJ740 (MAX-KT85) - Music center.</p>
-		<br>
-		<h3>Computer</h3>
-		<p>CPU: Intel Core i3 3217U 1.80 GHz</p>
-		<p>GPU: Intel HD Graphics 4000</p>
-		<p>RAM: Hynix 4GBx2 8GB</p>
-		<h3>Phone</h3>
-		<p>Xiaomi Redmi X4 3/32GB</p>
-		<h3>Favorite artist</h3>
-		<p>Кишлак, АПФС.</p>
-		<br>-->
+		<div id="gradientmiddle"></div>
 		<div id="specs">
+			<h1>My specs</h1>
+			<h3>Audio</h3>
+			<li>LG MCS66F - Speaker.</li>
+			<li>Genius SW G2.1 1250 - Subwoofer.</li>
+			<li>Samsung MAX-KJ740 (MAX-KT85) - Music center.</li>
+			<br>
+			<h3>Notebook</h3>
+			<li>CPU: Intel Core i3 3217U 1.80 GHz</li>
+			<li>GPU: Intel HD Graphics 4000</li>
+			<li>RAM: Hynix 4GBx2 8GB</li>
+		</div>
+		<div id="gradientmiddle"></div>
+		<div id="specs">
+			<h1>775 Socket PC Build</h1>
 			<h3>Motherboard:	ASUS P5QC</h3>
 			<li>LGA775</li>
 			<li>P45</li><br>
@@ -50,7 +51,7 @@
 			<li>1260MHz</li><br>
 			<h3>Power Supply:	CoolerMaster GOLD MWE 550</h3><br>
 			<h3>Cooler:		Noctua NH-P1</h3>
-		</div><br>
+		</div>
 		<div id="gradientmiddle"></div>
 		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
