--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<div id="hello">
 			<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
 		</div>
-		</header><br>
+		</header>
+		<div id="block"><h2>Glory to Ukraine!</h2></div>
 		<div id="gradientmiddle"></div>
 		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
