--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta charset="utf-8">
 </head>
-<body style="font-size: 75%">
+<body>
 	<div class="container">
-		<div id="gradienttop"></div><br>
-		<header>
-		<h1>18 Years old ❤️</h1>
-		<div id="hello">
-			<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
-		</div>
-		</header><br>
-		<div id="block"><h2>Glory to Ukraine!</h2></div>
-		<div id="gradientmiddle"></div>
 		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 	</div>
 </body>
 </html>
+
+<!--<div id="gradienttop"></div><br>
+	<header>
+	<h1>18 Years old ❤️</h1>
+	<div id="hello">
+		<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
+	</div>
+	</header><br>
+	<div id="block"><h2>Glory to Ukraine!</h2></div>
+	<div id="gradientmiddle"></div>-->
