--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta charset="utf-8">
+	<title>ecnecsenimul — website</title>
 </head>
 <body>
-	<div class="container">
-		<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
+	<header>
+		<h1>ecnecsenimul — website</h1>
+		<ul>
+			<li><a class="active" href="">Home</a></li>
+			<li><a href="">Downloads</a></li>
+			<li style="float:right"><a href="">About</a></li>
+		  </ul>
+	</header>
+	<div class="content">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat asperiores ab, pariatur veniam veritatis magnam mollitia, tempore ratione quibusdam minima corporis? Eveniet, voluptatem! Enim molestiae minima excepturi culpa recusandae ullam.</p>
 	</div>
+	<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 </body>
 </html>
-
-<!--<div id="gradienttop"></div><br>
-	<header>
-	<h1>18 Years old ❤️</h1>
-	<div id="hello">
-		<br><strong>Willkommen • Welcome • Bienvenue • Benvenuto • Bienvenido • ようこそ • Mabuhay • Välkommen • Добро пожаловать • Hoş geldiniz • Bonvenon • 歡迎</strong>
-	</div>
-	</header><br>
-	<div id="block"><h2>Glory to Ukraine!</h2></div>
-	<div id="gradientmiddle"></div>-->
