Selection game added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 		  </ul>
 	</header>
 	<div class="content">
-		
+		<h2>Selection - a game based on Unity engine.</h2>
+		<img id="floated" src="SelectionIco.jpg">
+			<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
+			<p>Implemented local multiplayer and a simple map.</p>
+			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a></p>
 	</div>
 	<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 </body>
