--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 			<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
 			<p>Implemented local multiplayer and a simple map.</p>
 			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a></p>
+			<h3>System requirements:</h3>
+			<p>OS - Windows 7 x64 and above.</p>
+			<p>GPU - Intel HD Graphics 3000</p>
+			<p>RAM - 128MB</p>
+			<p>80 megabytes of free space</p>
 	</div>
 	<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 </body>
