--- a/index.html
+++ b/index.html
@@ -1,31 +1,10 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta http-equiv="refresh" content="0;home.html" />
 	<meta charset="utf-8">
 	<title>ecnecsenimul — website</title>
 </head>
 <body>
-	<header>
-		<h1>ecnecsenimul — website</h1>
-		<ul>
-			<li><a class="active" href="">Home</a></li>
-			<li><a href="">Downloads</a></li>
-			<li style="float:right"><a href="">About</a></li>
-		  </ul>
-	</header>
-	<div class="content">
-		<h2>Selection - a game based on Unity engine.</h2>
-		<img id="floated" src="SelectionIco.jpg">
-			<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
-			<p>Implemented local multiplayer and a simple map.</p>
-			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a></p>
-			<h3>System requirements:</h3>
-			<p>OS - Windows 7 x64 and above.</p>
-			<p>GPU - Intel HD Graphics 3000</p>
-			<p>RAM - 128MB</p>
-			<p>80 megabytes of free space</p>
-	</div>
-	<footer>© 2022 tr1cyrt1s (ecnecsenimul)</footer>
 </body>
 </html>
