--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="google-site-verification" content="vTSAtjl8PdnLRS-ya4X556JgTQbXaCN9HKHVQdE-QKw" />
 	<meta charset="utf-8">
 	<title>ecnecsenimul — Home</title>
 </head>
