--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="refresh" content="0;home.html" />
+	<meta name="google-site-verification" content="vTSAtjl8PdnLRS-ya4X556JgTQbXaCN9HKHVQdE-QKw" />
 	<meta charset="utf-8">
 	<title>ecnecsenimul — website</title>
 </head>
