--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta charset="utf-8">
 	<title>ecnecsenimul — Downloads</title>
@@ -15,12 +15,12 @@
 		<h1><a href="index.html">ecnecsenimul — website</a></h1>
 		<ul>
 			<li><a href="home.html">Home</a></li>
-			<li><a class="active" href="downloads.html">Downloads</a></li>
-			<li style="float:right"><a href="about.html">About</a></li>
+			<li><a href="downloads.html">Downloads</a></li>
+			<li style="float:right"><a class="active" href="">About</a></li>
 		  </ul>
 		</header>
 		<div class="content">
-			<h2>Downloads</h2>
+            <h2>About</h2>
 		</div>
 		<footer>
 			<ul>
@@ -37,10 +37,10 @@
 				</li>
 			</ul>
 		</footer>
-		<script>
-			$(window).on('load', function() { 
-				$('#loading').hide();
-			});
-		</script>
+        <script>
+            $(window).on('load', function() { 
+                $('#loading').hide();
+            });
+        </script>
 	</body>
 	</html>
