--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="home.html">Home</a></li>
 			<li><a href="downloads.html">Downloads</a></li>
-			<li style="float:right"><a class="active" href="">About</a></li>
+			<li style="float:right"><a class="active" href="">About me</a></li>
 		  </ul>
 		</header>
 		<div class="content">
