--- a/downloads.html
+++ b/downloads.html
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="home.html">Home</a></li>
 			<li><a class="active" href="downloads.html">Downloads</a></li>
-			<li style="float:right"><a href="about.html">About</a></li>
+			<li style="float:right"><a href="about.html">About me</a></li>
 		  </ul>
 		</header>
 		<div class="content">
