--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta charset="utf-8">
-	<title>ecnecsenimul — Downloads</title>
+	<title>ecnecsenimul — About</title>
 </head>
 <body>
 	<div id="loading">
