--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 		  </ul>
 		</header>
 		<div class="content">
-            <h2>About</h2>
+            <h2>About me</h2>
 		</div>
 		<footer>
 			<ul>
