--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 	<header>
 		<h1><a href="index.html">ecnecsenimul — website</a></h1>
 		<ul>
-			<li><a class="active" href="home.html">Home</a></li>
+			<li><a class="active" href="home.html">Home page</a></li>
 			<li><a href="downloads.html">Downloads</a></li>
 		    <li style="float:right"><a href="about.html">About me</a></li>
 		</ul>
