--- a/downloads.html
+++ b/downloads.html
@@ -21,6 +21,13 @@
 		</header>
 		<div class="content">
 			<h2>Downloads</h2>
+			<div id="downloads">
+				<img src="/screenshots/ecfetch.jpg"><br>
+				<a href="/files/ecFetch Setup 0.2.6.exe">Download - ecFetch v0.2.6 (Win x64)</a><br>
+				<img src="/screenshots/selmp.jpg""><br>
+				<a href="/files/Selmp ЗБТ v0.1.3.rar">Download - Selection v0.1.3 (Win x64)</a><br>
+				<a href="">Download - Selection v0.1.3 (Win x86 later)</a><br>
+			</div>
 		</div>
 		<footer>
 			<ul>
