--- a/downloads.html
+++ b/downloads.html
@@ -16,17 +16,17 @@
 		<ul>
 			<li><a href="home.html">Home page</a></li>
 			<li><a class="active" href="downloads.html">Downloads</a></li>
-			<li style="float:right"><a href="about.html">About me</a></li>
+			<!--<li style="float:right"><a href="about.html">About me</a></li>-->
 		  </ul>
 		</header>
 		<div class="content">
-			<h2>Downloads</h2>
-			<div id="downloads">
-				<img src="/screenshots/ecfetch.jpg"><br>
-				<a href="/files/ecFetch Setup 0.2.6.exe">Download - ecFetch v0.2.6 (Win x64)</a><br>
-				<img src="/screenshots/selmp.jpg""><br>
-				<a href="/files/Selmp ЗБТ v0.1.3.rar">Download - Selection v0.1.3 (Win x64)</a><br>
-				<a href="">Download - Selection v0.1.3 (Win x86 later)</a><br>
+			<div class="dblock">
+				<h2>XHaskell <a href="/files/XHaskell-v2.4.apk">Download - XHaskell v2.4 (Android)</a></h2>
+				<!-- <a href="/screenshots/xhask.png"><img src="/screenshots/xhask.png"></a><br> -->
+				<h2>ecFetch <a href="/files/ecFetch Setup 0.2.6.exe">Download - ecFetch v0.2.6 (Win x64)</a></h2>
+				<!-- <a href="/screenshots/ecfetch.jpg"><img src="/screenshots/ecfetch.jpg"></a><br> -->
+				<h2>Selection <a href="/files/Selmp ЗБТ v0.1.3.rar">Download - Selection v0.1.3 (Win x64)</a><br><a href="">Download - Selection v0.1.3 (Win x86 later)</a><br></h2>
+				<!-- <a href="/screenshots/selmp.jpg"><img src="/screenshots/selmp.jpg"></a><br> -->
 			</div>
 		</div>
 		<footer>
