--- a/home.html
+++ b/home.html
@@ -16,20 +16,34 @@
 		<ul>
 			<li><a class="active" href="home.html">Home page</a></li>
 			<li><a href="downloads.html">Downloads</a></li>
-		    <li style="float:right"><a href="about.html">About me</a></li>
+		    <!--<li style="float:right"><a href="about.html">About me</a></li>-->
 		</ul>
 	</header>
 	<div class="content">
-		<h2>Selection - a game based on Unity engine.</h2>
-		<img id="floated" src="SelectionIco.jpg">
+		<div class="block">
+			<h2>XHaskell</h2>
+			<a href="/screenshots/xhask.png"><img id="floated" src="/screenshots/xhask.png"></a>
+			<p>Version: v2.4</p>
+			<p>Licence: GPLv3</p>
+			<p>Author: searemind</p>
+			<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
+			<h3>System requirements:</h3>
+            <p>OS - Android 5.0 and above</p>
+            <p>RAM - 1.5GB</p>
+            <p>250 megabytes of free space</p>
+		</div>
+		<div class="block">
+			<h2>Selection - a game based on Unity engine.</h2>
+		 	<a href="SelectionIco.jpg"><img id="floated" src="SelectionIco.jpg"></a>
 			<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
 			<p>Implemented local multiplayer and a simple map.</p>
-			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the downloads section.</p>
+			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the <a href="downloads.html">downloads</a> section.</p>
             <h3>System requirements:</h3>
             <p>OS - Windows 7 x64 and above</p>
             <p>GPU - Intel HD Graphics 3000</p>
             <p>RAM - 128MB</p>
             <p>80 megabytes of free space</p>
+		</div>
 	</div>
 	<footer>
         <ul>
