--- a/home.html
+++ b/home.html
@@ -12,29 +12,84 @@
 		<img id="loading-image" src="loader.gif">
 	</div>
 	<header>
-		<h1><a href="index.html">ecnecsenimul — website</a></h1>
-		<ul>
-			<li><a class="active" href="home.html">Home page</a></li>
-			<li><a href="downloads.html">Downloads</a></li>
-		    <!--<li style="float:right"><a href="about.html">About me</a></li>-->
-		</ul>
+		<a href="index.html">ecnecsenimul — website</a>
 	</header>
 	<div class="content">
-		<div class="block">
-			<h2>XHaskell</h2>
+		<div class="clearfix">
+			<div class="blk">
+				<h2>XHaskell</h2>
+				<p>Version: 2.4</p>
+				<p>Licence: GPLv3</p>
+				<p>Author: searemind</p>
+				<p>XHaskell - is a haskell interpreter with a gui desktop included</p>
+				<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
+				<h3>System requirements:</h3>
+				<p>OS - Android 5.0 and above</p>
+				<p>RAM - 250MB</p>
+				<p>300 megabytes of free space</p>
+			</div>
+			<div class="blk-img">
+				<a href="/screenshots/xhask.png"><img id="floated" src="/screenshots/xhask.png"></a>
+			</div>
+			<div class="blk" style="background-color:#2b2b2b">
+				<h2>ecFetch</h2>
+				<p>Version: 1.3</p>
+				<p>Author: ecnecsenimul</p>
+				<p>ecFetch - is a system information tool on ElectronJs</p>
+				<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
+				<h3>System requirements:</h3>
+				<p>OS - Windows 7 x64 and above</p>
+				<p>60 megabytes of free space</p>
+			</div>
+			<div class="blk-img" style="background-color:#2b2b2b">
+				<a href="/screenshots/xhask.png"><img id="floated" src="/screenshots/ecfetch.jpg"></a>
+			</div>
+			<div class="blk">
+				<h2>Selection - a game based on Unity engine.</h2>
+				<p>Version: 1.3</p>
+				<p>Author: ecnecsenimul</p>
+				<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
+				<p>Implemented local multiplayer and a simple map.</p>
+				<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the <a href="downloads.html">downloads</a> section.</p>
+				<h3>System requirements:</h3>
+				<p>OS - Windows 7 x64 and above</p>
+				<p>GPU - Intel HD Graphics 3000</p>
+				<p>RAM - 128MB</p>
+				<p>80 megabytes of free space</p>
+			</div>
+			<div class="blk-img">
+				<a href="/screenshots/xhask.png"><img id="floated" src="/SelectionIco.jpg"></a>
+			</div>			
+		  </div>
+		<!--<div class="block">
 			<a href="/screenshots/xhask.png"><img id="floated" src="/screenshots/xhask.png"></a>
-			<p>Version: v2.4</p>
+			<h2>XHaskell</h2>
+			<p>Version: 2.4</p>
 			<p>Licence: GPLv3</p>
 			<p>Author: searemind</p>
+			<p>XHaskell - is a haskell interpreter with a gui desktop included</p>
 			<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
 			<h3>System requirements:</h3>
             <p>OS - Android 5.0 and above</p>
-            <p>RAM - 1.5GB</p>
-            <p>250 megabytes of free space</p>
+            <p>RAM - 250MB</p>
+            <p>300 megabytes of free space</p>
 		</div>
 		<div class="block">
+			<a href="/screenshots/ecfetch.jpg"><img id="floated" src="/screenshots/ecfetch.jpg"></a>
+			<h2>ecFetch</h2>
+			<p>Version: 1.3</p>
+			<p>Author: ecnecsenimul</p>
+			<p>ecFetch - is a system information tool on ElectronJs</p>
+			<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
+            <h3>System requirements:</h3>
+            <p>OS - Windows 7 x64 and above</p>
+			<p>60 megabytes of free space</p>
+		</div>
+		<div class="block">
+			<a href="SelectionIco.jpg"><img id="floated" src="SelectionIco.jpg"></a>
 			<h2>Selection - a game based on Unity engine.</h2>
-		 	<a href="SelectionIco.jpg"><img id="floated" src="SelectionIco.jpg"></a>
+			<p>Version: 1.3</p>
+			<p>Author: ecnecsenimul</p>
 			<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
 			<p>Implemented local multiplayer and a simple map.</p>
 			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the <a href="downloads.html">downloads</a> section.</p>
@@ -43,7 +98,7 @@
             <p>GPU - Intel HD Graphics 3000</p>
             <p>RAM - 128MB</p>
             <p>80 megabytes of free space</p>
-		</div>
+		</div>-->
 	</div>
 	<footer>
         <ul>
