--- a/home.html
+++ b/home.html
@@ -12,17 +12,18 @@
 		<img id="loading-image" src="loader.gif">
 	</div>
 	<header>
-		<a href="index.html">ecnecsenimul — website</a>
+		<a href="index.html">ecnecsenimul</a>
 	</header>
 	<div class="content">
 		<div class="clearfix">
 			<div class="blk">
 				<h2>XHaskell</h2>
-				<p>Version: 2.4</p>
+				<p>Version: 2.5.1</p>
 				<p>Licence: GPLv3</p>
 				<p>Author: searemind</p>
-				<p>XHaskell - is a haskell interpreter with a gui desktop included</p>
-				<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
+				<p>XHaskell - is a haskell interpreter with a gui desktop included (JWM)</p>
+				<!--<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>-->
+				<p><a href="XHaskell.html">Learn More</a></p>
 				<h3>System requirements:</h3>
 				<p>OS - Android 5.0 and above</p>
 				<p>RAM - 250MB</p>
@@ -33,24 +34,28 @@
 			</div>
 			<div class="blk" style="background-color:#2b2b2b">
 				<h2>ecFetch</h2>
+				<h2 style="color: red;">Project has closed!</h2>
 				<p>Version: 1.3</p>
 				<p>Author: ecnecsenimul</p>
 				<p>ecFetch - is a system information tool on ElectronJs</p>
-				<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
+				<!--<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>-->
+				<p><a href="ecFetch.html">Learn More</a></p>
 				<h3>System requirements:</h3>
 				<p>OS - Windows 7 x64 and above</p>
 				<p>60 megabytes of free space</p>
 			</div>
 			<div class="blk-img" style="background-color:#2b2b2b">
-				<a href="/screenshots/xhask.png"><img id="floated" src="/screenshots/ecfetch.jpg"></a>
+				<a href="/screenshots/ecfetch.jpg"><img id="floated" src="/screenshots/ecfetch.jpg"></a>
 			</div>
 			<div class="blk">
 				<h2>Selection - a game based on Unity engine.</h2>
+				<h2 style="color: red;">Project has closed!</h2>
 				<p>Version: 1.3</p>
 				<p>Author: ecnecsenimul</p>
 				<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
 				<p>Implemented local multiplayer and a simple map.</p>
-				<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the <a href="downloads.html">downloads</a> section.</p>
+				<!--<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the <a href="downloads.html">downloads</a> section.</p>-->
+				<p><a href="Selection.html">Learn More</a></p>
 				<h3>System requirements:</h3>
 				<p>OS - Windows 7 x64 and above</p>
 				<p>GPU - Intel HD Graphics 3000</p>
@@ -58,47 +63,9 @@
 				<p>80 megabytes of free space</p>
 			</div>
 			<div class="blk-img">
-				<a href="/screenshots/xhask.png"><img id="floated" src="/SelectionIco.jpg"></a>
+				<a href="/SelectionIco.jpg"><img id="floated" src="/SelectionIco.jpg"></a>
 			</div>			
 		  </div>
-		<!--<div class="block">
-			<a href="/screenshots/xhask.png"><img id="floated" src="/screenshots/xhask.png"></a>
-			<h2>XHaskell</h2>
-			<p>Version: 2.4</p>
-			<p>Licence: GPLv3</p>
-			<p>Author: searemind</p>
-			<p>XHaskell - is a haskell interpreter with a gui desktop included</p>
-			<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
-			<h3>System requirements:</h3>
-            <p>OS - Android 5.0 and above</p>
-            <p>RAM - 250MB</p>
-            <p>300 megabytes of free space</p>
-		</div>
-		<div class="block">
-			<a href="/screenshots/ecfetch.jpg"><img id="floated" src="/screenshots/ecfetch.jpg"></a>
-			<h2>ecFetch</h2>
-			<p>Version: 1.3</p>
-			<p>Author: ecnecsenimul</p>
-			<p>ecFetch - is a system information tool on ElectronJs</p>
-			<p>You can follow the updates and download this app in the <a href="downloads.html">downloads</a> section.</p>
-            <h3>System requirements:</h3>
-            <p>OS - Windows 7 x64 and above</p>
-			<p>60 megabytes of free space</p>
-		</div>
-		<div class="block">
-			<a href="SelectionIco.jpg"><img id="floated" src="SelectionIco.jpg"></a>
-			<h2>Selection - a game based on Unity engine.</h2>
-			<p>Version: 1.3</p>
-			<p>Author: ecnecsenimul</p>
-			<p>At the moment, the fate of the game is still being decided. This is the so-called training ground for entertainment and gaining experience in creating games.</p>
-			<p>Implemented local multiplayer and a simple map.</p>
-			<p>You can follow the updates and download the game in the <a href="https://t.me/+fBdimtQUe503NGYy">Telegram channel</a>, or in the <a href="downloads.html">downloads</a> section.</p>
-            <h3>System requirements:</h3>
-            <p>OS - Windows 7 x64 and above</p>
-            <p>GPU - Intel HD Graphics 3000</p>
-            <p>RAM - 128MB</p>
-            <p>80 megabytes of free space</p>
-		</div>-->
 	</div>
 	<footer>
         <ul>
