--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta http-equiv="refresh" content="0;home.html" />
+	<meta http-equiv="refresh" content="0;downloads.html" />
 	<meta name="google-site-verification" content="vTSAtjl8PdnLRS-ya4X556JgTQbXaCN9HKHVQdE-QKw" />
 	<meta charset="utf-8">
 	<title>ecnecsenimul — website</title>
