new landing page

--- a/home.html
+++ b/home.html
@@ -1,20 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta charset="utf-8">
-	<title>ecnecsenimul — Home</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div id="loading">
-		<img id="loading-image" src="loader.gif">
-	</div>
-	<header>
-		<h1><a href="index.html">ecnecsenimul — website</a></h1>
-	</header>
-	<footer>
+    <div class="layout">
+        <div id="sad"></div>
+        <div id="title">
+            <b>Website under</b><br><b>construction.</b>
+        </div>
+    </div>
+    <footer>
 		<ul>
 			<li>
 				<p>© 2020-2022</p>
@@ -31,10 +30,5 @@
 			</li>
 		</ul>
 	</footer>
-	<script>
-		$(window).on('load', function() { 
-			$('#loading').hide();
-		});
-	</script>
-</body>
+</body> 
 </html>
