--- a/home.html
+++ b/home.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="layout">
-        <div id="sad"></div>
-        <div id="title">
-            <b>Website under</b><br><b>construction.</b>
+        <div class="content">
+            <div id="sad"></div>
+            <div id="title">
+                <b>Website under</b><br><b>construction.</b>
+            </div>
         </div>
     </div>
     <footer>
