--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<div id="loading">
 		<img id="loading-image" src="loader.gif">
 	</div>
-	<script>
+	<!--<script>
 		$(window).on('load', function() { 
 			$('#loading').hide();
 		});
-	</script>
+	</script>-->
 </body>
 </html>
