--- a/home.html
+++ b/home.html
@@ -5,9 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+
+	<script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
     <div class="layout">
+		<nav id="menu">
+			<div class="menu-item">
+				<div class="menu-text">
+					<b>Downloads</b>
+				</div>
+				<div class="sub-menu">
+					<div class="icon-box">
+						<div class="icon"><i class="fal fa-wind-turbine"></i></div>
+						<div class="text">
+							<div class="title">Turbo Editor <i class="far fa-arrow-right"></i></div>
+							<div class="sub-text">Edit your code while slowing down time.</div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><i class="fal fa-lightbulb-on"></i></div>
+						<div class="text">
+							<div class="title">Idea Creator <i class="far fa-arrow-right"></i></div>
+							<div class="sub-text">Think of an idea, and have an AI create it.</div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><i class="fal fa-bomb"></i></div>
+						<div class="text">
+							<div class="title">Super Collider <i class="far fa-arrow-right"></i></div>
+							<div class="sub-text">Remove mass from any object.</div>
+						</div>
+					</div>
+					<div class="sub-menu-holder"></div>
+				</div>
+			</div>
+			<div class="menu-item">
+				<div class="menu-text">
+					<b>About us</b>
+				</div>
+				<div class="sub-menu">
+					<div class="icon-box">
+						<div class="icon"><i class="far fa-satellite"></i></div>
+						<div class="text">
+							<div class="title">Forum <i class="far fa-arrow-right"></i></div>
+							<div class="sub-text">Join our passionate community.</div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><i class="fab fa-twitter-square"></i></div>
+						<div class="text">
+							<div class="title">Twitter <i class="far fa-arrow-right"></i></div>
+							<div class="sub-text">Follow us on twitter.</div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><i class="fab fa-twitch"></i></div>
+						<div class="text">
+							<div class="title">Live Stream <i class="far fa-arrow-right"></i></div>
+							<div class="sub-text">We stream content every day.</div>
+						</div>
+					</div>
+					<div class="sub-menu-holder"></div>
+				</div>
+			</div>
+			<div id="sub-menu-container">
+				<div id="sub-menu-holder">
+					<div id="sub-menu-bottom">
+						
+					</div>
+				</div>
+			</div>
+		</nav>
         <div class="content">
             <div id="sad"></div>
             <div id="title">
