--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div class="layout">
+		<style style="display: block; white-space: pre;" contenteditable="">* { transition: .3s all; } </style>
 		<nav id="menu">
 			<div class="menu-item">
 				<div class="menu-text">
