--- a/home.html
+++ b/home.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-
+	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<script src="https://kit.fontawesome.com/628c8d2499.js" crossorigin="anonymous"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" type="text/css" />
+
+	<title>shardplex.ru — website</title>
 </head>
 <body>
     <div class="layout">
-		<style style="display: block; white-space: pre;" contenteditable="">* { transition: .3s all; } </style>
 		<nav id="menu">
 			<div class="menu-item">
 				<div class="menu-text">
-					<b>Downloads</b>
+					<b>О нас</b>
 				</div>
 				<div class="sub-menu">
 					<div class="icon-box">
-						<div class="icon"><i class="fal fa-wind-turbine"></i></div>
+						<div class="icon"><img src="/images/yt.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
-							<div class="title">Turbo Editor <i class="far fa-arrow-right"></i></div>
-							<div class="sub-text">Edit your code while slowing down time.</div>
+							<div class="title">YouTube</div>
+							<div class="sub-text"><a href="https://www.youtube.com/@shardclay">Ютуб канал Шарда.</a></div>
 						</div>
 					</div>
 					<div class="icon-box">
-						<div class="icon"><i class="fal fa-lightbulb-on"></i></div>
+						<div class="icon"><img src="/images/tw.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
-							<div class="title">Idea Creator <i class="far fa-arrow-right"></i></div>
-							<div class="sub-text">Think of an idea, and have an AI create it.</div>
+							<div class="title">Twitch</div>
+							<div class="sub-text"><a href="https://www.twitch.tv/shardclay">Твич канал Шарда.</a></div>
 						</div>
 					</div>
 					<div class="icon-box">
-						<div class="icon"><i class="fal fa-bomb"></i></div>
+						<div class="icon"><img src="/images/tg.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
-							<div class="title">Super Collider <i class="far fa-arrow-right"></i></div>
-							<div class="sub-text">Remove mass from any object.</div>
+							<div class="title">Telegram</div>
+							<div class="sub-text"><a href="">Телеграм канал Шарда.</a></div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><img src="/images/vk.jpg" style="width: 42px; border-radius: 10px;"></div>
+						<div class="text">
+							<div class="title">VK</div>
+							<div class="sub-text"><a href="https://vk.com/shardstream">Группа Шарда в ВК.</a></div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><img src="/images/yt.jpg" style="width: 42px; border-radius: 10px;"></div>
+						<div class="text">
+							<div class="title">Нарезки Шарда</div>
+							<div class="sub-text"><a href="">Нарезки стримов Шарда.</a></div>
 						</div>
 					</div>
 					<div class="sub-menu-holder"></div>
@@ -47,28 +60,50 @@
 			</div>
 			<div class="menu-item">
 				<div class="menu-text">
-					<b>About us</b>
+					<b>Загрузки</b>
 				</div>
 				<div class="sub-menu">
 					<div class="icon-box">
-						<div class="icon"><i class="far fa-satellite"></i></div>
+						<div class="icon"><img src="/images/rar.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
-							<div class="title">Forum <i class="far fa-arrow-right"></i></div>
-							<div class="sub-text">Join our passionate community.</div>
+							<div class="title">Сборка модов Project Zomboid.</div>
+							<div class="sub-text"><a href="">Скачать</a></div>
 						</div>
 					</div>
 					<div class="icon-box">
-						<div class="icon"><i class="fab fa-twitter-square"></i></div>
+						<div class="icon"><img src="/images/rar.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
-							<div class="title">Twitter <i class="far fa-arrow-right"></i></div>
-							<div class="sub-text">Follow us on twitter.</div>
+							<div class="title">Сборка модов Minecraft.</div>
+							<div class="sub-text"><a href="">Скачать</a></div>
 						</div>
 					</div>
 					<div class="icon-box">
-						<div class="icon"><i class="fab fa-twitch"></i></div>
+						<div class="icon"><img src="/images/rar.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
-							<div class="title">Live Stream <i class="far fa-arrow-right"></i></div>
-							<div class="sub-text">We stream content every day.</div>
+							<div class="title">Сборка модов RimWorld.</div>
+							<div class="sub-text"><a href="">Скачать</a></div>
+						</div>
+					</div>
+					<div class="sub-menu-holder"></div>
+				</div>
+			</div>
+			<div class="menu-item">
+				<div class="menu-text">
+					<b>Донат</b>
+				</div>
+				<div class="sub-menu">
+					<div class="icon-box">
+						<div class="icon"><img src="/images/da.jpg" style="width: 42px; border-radius: 10px;"></div>
+						<div class="text">
+							<div class="title">Donation Alerts</div>
+							<div class="sub-text"><a href="https://www.donationalerts.com/r/shardclay">Сюда жертвовать свои кровные.</a></div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="icon"><img src="/images/ym.jpg" style="width: 42px; border-radius: 10px;"></div>
+						<div class="text">
+							<div class="title">ЮMoney</div>
+							<div class="sub-text"><a href="/yoomoney.html">Если, Donation Alerts не вариант.</a></div>
 						</div>
 					</div>
 					<div class="sub-menu-holder"></div>
@@ -77,17 +112,20 @@
 			<div id="sub-menu-container">
 				<div id="sub-menu-holder">
 					<div id="sub-menu-bottom">
-						
+
 					</div>
 				</div>
 			</div>
 		</nav>
         <div class="content">
-            <div id="sad"></div>
+            <div id="emoji"></div>
             <div id="title">
-                <b>Website under</b><br><b>construction.</b>
+                <b>Shardplex.</b>
+				<p>IP Сервера в Minecraft - shardplex.ru</p>
+				<i>1.19.2</i>
             </div>
         </div>
+		<!--<div id="downloads"><div id="container"></div></div>-->
     </div>
     <footer>
 		<ul>
