--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="refresh" content="0;home.html" />
 	<meta name="google-site-verification" content="vTSAtjl8PdnLRS-ya4X556JgTQbXaCN9HKHVQdE-QKw" />
 	<meta charset="utf-8">
-	<title>ecnecsenimul — website</title>
+	
+	<title>shardplex.ru — website</title>
 </head>
 <body>
 	<div id="loading">
