--- a/home.html
+++ b/home.html
@@ -13,6 +13,22 @@
 	<title>shardplex.ru — website</title>
 </head>
 <body>
+	<script type="text/javascript">
+		function copyToClipboard() {
+			let div = document.getElementById('yoomoney');
+			let text = "2204 1201 0861 0177";
+			let textArea = document.createElement('textarea');
+			textArea.width = "0px";
+			textArea.height = "0px";
+			textArea.background = "transparents";
+			textArea.value = text;
+			document.body.append(textArea);
+			textArea.select();
+			document.execCommand('copy');
+			document.body.removeChild(textArea);
+			alert("Номер карты скопирован.");
+       }
+	</script>
     <div class="layout">
 		<nav id="menu">
 			<div class="menu-item">
@@ -38,7 +54,7 @@
 						<div class="icon"><img src="/images/tg.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
 							<div class="title">Telegram</div>
-							<div class="sub-text"><a href="">Телеграм канал Шарда.</a></div>
+							<div class="sub-text"><a href="https://t.me/shardclay_stream">Телеграм канал Шарда.</a></div>
 						</div>
 					</div>
 					<div class="icon-box">
@@ -52,7 +68,7 @@
 						<div class="icon"><img src="/images/yt.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
 							<div class="title">Нарезки Шарда</div>
-							<div class="sub-text"><a href="">Нарезки стримов Шарда.</a></div>
+							<div class="sub-text"><a href="https://www.youtube.com/@anishardclay">Нарезки стримов Шарда.</a></div>
 						</div>
 					</div>
 					<div class="sub-menu-holder"></div>
@@ -103,7 +119,7 @@
 						<div class="icon"><img src="/images/ym.jpg" style="width: 42px; border-radius: 10px;"></div>
 						<div class="text">
 							<div class="title">ЮMoney</div>
-							<div class="sub-text"><a href="/yoomoney.html">Если, Donation Alerts не вариант.</a></div>
+							<div class="sub-text" id="yoomoney" onclick="copyToClipboard()"><a href="">Скопировать номер карты.</a></div>
 						</div>
 					</div>
 					<div class="sub-menu-holder"></div>
