--- a/home.html
+++ b/home.html
@@ -10,135 +10,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-	<title>shardplex.ru — website</title>
+	<title>glowspruce — website</title>
 </head>
 <body>
-	<script type="text/javascript">
-		function copyToClipboard() {
-			let div = document.getElementById('yoomoney');
-			let text = "2204 1201 0861 0177";
-			let textArea = document.createElement('textarea');
-			textArea.width = "0px";
-			textArea.height = "0px";
-			textArea.background = "transparents";
-			textArea.value = text;
-			document.body.append(textArea);
-			textArea.select();
-			document.execCommand('copy');
-			document.body.removeChild(textArea);
-			alert("Номер карты скопирован.");
-       }
-	</script>
     <div class="layout">
-		<nav id="menu">
-			<div class="menu-item">
-				<div class="menu-text">
-					<b>О нас</b>
-				</div>
-				<div class="sub-menu">
-					<div class="icon-box">
-						<div class="icon"><img src="/images/yt.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">YouTube</div>
-							<div class="sub-text"><a href="https://www.youtube.com/@shardclay">Ютуб канал Шарда.</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/yt.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Нарезки Шарда</div>
-							<div class="sub-text"><a href="https://www.youtube.com/@anishardclay">Нарезки стримов Шарда.</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/tw.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Twitch</div>
-							<div class="sub-text"><a href="https://www.twitch.tv/shardclay">Твич канал Шарда.</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/tg.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Telegram</div>
-							<div class="sub-text"><a href="https://t.me/shardclay_stream">Телеграм канал Шарда.</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/vk.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">VK</div>
-							<div class="sub-text"><a href="https://vk.com/shardstream">Группа Шарда в ВК.</a></div>
-						</div>
-					</div>
-					<div class="sub-menu-holder"></div>
-				</div>
-			</div>
-			<div class="menu-item">
-				<div class="menu-text">
-					<b>Загрузки</b>
-				</div>
-				<div class="sub-menu">
-					<div class="icon-box">
-						<div class="icon"><img src="/images/rar.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Сборка модов Project Zomboid.</div>
-							<div class="sub-text"><a href="">Скачать</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/rar.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Сборка модов Minecraft.</div>
-							<div class="sub-text"><a href="">Скачать</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/rar.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Сборка модов RimWorld.</div>
-							<div class="sub-text"><a href="">Скачать</a></div>
-						</div>
-					</div>
-					<div class="sub-menu-holder"></div>
-				</div>
-			</div>
-			<div class="menu-item">
-				<div class="menu-text">
-					<b>Донат</b>
-				</div>
-				<div class="sub-menu">
-					<div class="icon-box">
-						<div class="icon"><img src="/images/da.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">Donation Alerts</div>
-							<div class="sub-text"><a href="https://www.donationalerts.com/r/shardclay">Сюда жертвовать свои кровные.</a></div>
-						</div>
-					</div>
-					<div class="icon-box">
-						<div class="icon"><img src="/images/ym.jpg" style="width: 42px; border-radius: 10px;"></div>
-						<div class="text">
-							<div class="title">ЮMoney</div>
-							<div class="sub-text" id="yoomoney" onclick="copyToClipboard()"><a href="">Скопировать номер карты.</a></div>
-						</div>
-					</div>
-					<div class="sub-menu-holder"></div>
-				</div>
-			</div>
-			<div id="sub-menu-container">
-				<div id="sub-menu-holder">
-					<div id="sub-menu-bottom">
-
-					</div>
-				</div>
-			</div>
-		</nav>
         <div class="content">
             <div id="emoji"></div>
             <div id="title">
-                <b>Shardplex.</b>
-				<p>IP Сервера в Minecraft - shardplex.ru</p>
-				<i>1.19.2</i>
+                <b>glowspruce</b>
             </div>
         </div>
 		<!--<div id="downloads"><div id="container"></div></div>-->
