--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 		<br>
-		<iframe url="https://terminator.aeza.net" width="100%" height="100%"></iframe>
+		<iframe src="https://terminator.aeza.net" width="100%" height="100%"></iframe>
 		<!--<div id="downloads"><div id="container"></div></div>-->
     </div>
     <footer>
