--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 		<br>
 		<!--<div id="downloads"><div id="container"></div></div>-->
     </div>
-	<iframe src="https://terminator.aeza.net" width="100%" height="100%"></iframe>
+	<iframe src="https://terminator.aeza.net" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
     <footer>
 		<ul>
 			<li>
