--- a/home.html
+++ b/home.html
@@ -20,10 +20,10 @@
                 <b>glowspruce</b>
             </div>
         </div>
-		<br>
 		<!--<div id="downloads"><div id="container"></div></div>-->
     </div>
-	<iframe src="https://terminator.aeza.net" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+	<br>
+	<iframe src="https://terminator.aeza.net" frameborder="0" style="overflow: hidden; height: 100vh; width: 100%"></iframe>
     <footer>
 		<ul>
 			<li>
